Add individual work pages

--- a/galeria/index.html
+++ b/galeria/index.html
@@ -39,56 +39,56 @@
                 <div class="card-text">
                     Ao reviver memórias de minha infância lembro-me de aos 7-8 anos, ir à casa de uma vizinha e passar horas brincando com suas bonecas Polly. Claro que ao sair de casa, carregava comigo meus brinquedos pois como poderia eu, brincar com bonecas? Fazer isso escondido dos meus pais era libertador ao mesmo tempo que arriscado. E se eu fosse pega? E se uma das bonecas quebrasse em minhas mãos? E se aquela boneca fosse minha? E se eu fosse a boneca? E se ela fosse eu?
                 </div>
-                <a href="./obras/1" class="see-more mt-3">VER MAIS</a>
+                <a href="../obras/1" class="see-more mt-3">VER MAIS</a>
             </div>
             <div class="card">
                 <a href="../obras/2"><img class="card-img-top" src="../assets/images/obra02.png" alt="Segunda obra da exposição"></a>
                 <div class="card-text">
                     A retificação do nome e gênero na certidão de nascimento é uma etapa crucial para pessoas trans, pois representa o reconhecimento legal e a validação de suas identidades.
                 </div>
-                <a href="./obras/2" class="see-more mt-3">VER MAIS</a>
+                <a href="../obras/2" class="see-more mt-3">VER MAIS</a>
             </div>
             <div class="card">
                 <a href="../obras/3"><img class="card-img-top" src="../assets/images/obra03.png" alt="Terceira obra da exposição"></a>
                 <div class="card-text">
                     A imposição de preceitos binários na moda reflete uma visão limitada e restritiva, que perpetua estereótipos de gênero. Ao insistir em categorias rígidas, essa abordagem nega a diversidade e complexidade das identidades de gênero. A moda, quando adere a esses padrões, contribui para a marginalização de indivíduos que não se encaixam nesses moldes predefinidos, limitando a expressão pessoal e reforçando normas arcaicas.
                 </div>
-                <a href="./obras/3" class="see-more mt-3">VER MAIS</a>
+                <a href="../obras/3" class="see-more mt-3">VER MAIS</a>
             </div>
             <div class="card">
                 <a href="../obras/4"><img class="card-img-top" src="../assets/images/obra04.png" alt="Quarta obra da exposição"></a>
                 <div class="card-text">
                     Durante a infância, buscava nos outros algo semelhante para validar minha existência, mas, infelizmente, os olhares que me retornavam destacavam sempre o quanto eu era percebida como diferente. Com o tempo, esses olhares passaram a rotular essas diferenças, resultando em contínuos processos de violência psicológica. Agora, compreendendo-me como travesti, percebo os olhares que se dirigem ao meu corpo ao transitar por diferentes espaços. Alguns desses olhares continuam a me violentar mas sei que em algum lugar, alguém me observa, podendo reconhecer e validar sua própria existência através da minha jornada.
                 </div>
-                <a href="./obras/4" class="see-more mt-3">VER MAIS</a>
+                <a href="../obras/4" class="see-more mt-3">VER MAIS</a>
             </div>
             <div class="card">
                 <a href="../obras/5"><img class="card-img-top" src="../assets/images/obra05.png" alt="Quinta obra da exposição"></a>
                 <div class="card-text">
                     Em um mundo baseado em percepções binárias de gênero, ao reivindicar-se enquanto pessoa trans estamos sujeitas a imposições sociais para nos encaixarmos novamente em um padrão idealizado de gênero. A pressão estética que recai sobre corpos trans, faz com que vivamos constantes crises de disforia por nos vermos distantes destes ideais. O sentimento de insatisfação e rejeição do próprio corpo faz com que muitas pessoas recorram a procedimentos indevidos, na busca por se adequar a estes padrões.
                 </div>
-                <a href="./obras/5" class="see-more mt-3">VER MAIS</a>
+                <a href="../obras/5" class="see-more mt-3">VER MAIS</a>
             </div>
             <div class="card">
                 <a href="../obras/6"><img class="card-img-top" src="../assets/images/obra06.png" alt="Sexta obra da exposição"></a>
                 <div class="card-text">
                     Do pajubá, aquendar, significa esconder. Prática comum entre travesti, aquendar a neca - esconder o pau - consiste no ato de comprimir a genitália afim de anular o volume e causar a impressão visual de ser uma buceta.
                 </div>
-                <a href="./obras/6" class="see-more mt-3">VER MAIS</a>
+                <a href="../obras/6" class="see-more mt-3">VER MAIS</a>
             </div>
             <div class="card">
                 <a href="../obras/7"><img class="card-img-top" src="../assets/images/obra07.png" alt="Sétima obra da exposição"></a>
                 <div class="card-text">
                     Imagine que a cirurgia de redesignação de gênero para uma mulher trans seja comparável a um capítulo final em um livro que muitos insistem em considerar como obrigatório para validar toda a narrativa. É como se a sociedade visse essa cirurgia como a última página que deve ser alcançada para validar a jornada de uma mulher trans, ignorando ou minimizando toda a história anterior, repleta de vivências, desafios e sentimentos que compõem sua identidade. No entanto, focar apenas na cirurgia de redesignação como o ápice da transição de gênero é semelhante a julgar um livro apenas por sua conclusão, sem apreciar ou entender a complexidade e a riqueza de cada capítulo anterior. A real necessidade da cirurgia de redesignação de gênero para uma mulher trans deve ser vista como uma escolha pessoal, não como um marco final que define sua identidade, respeitando-se o direito de cada indivíduo de expressar e viver sua identidade de gênero da maneira que se sente mais autêntico e confortável.
                 </div>
-                <a href="./obras/7" class="see-more mt-3">VER MAIS</a>
+                <a href="../obras/7" class="see-more mt-3">VER MAIS</a>
             </div>
             <div class="card">
                 <a href="../obras/8"><img class="card-img-top" src="../assets/images/obra08.png" alt="Oitava obra da exposição"></a>
                 <div class="card-text">
                     O reducionismo genitalista é uma abordagem que simplifica a identidade de gênero para se basear exclusivamente em características genitais. No contexto dos corpos trans,essa perspectiva limitada desconsidera a complexidade das experiências transgênero, focando apenas na anatomia física. É crucial reconhecer que a identidade de gênero vai além dos órgãos genitais, abrangendo aspectos psicológicos, sociais e culturais. Ao adotar uma visão mais abrangente, podemos promover uma compreensão mais inclusiva e respeitosa das diversas identidades de gênero existentes.
                 </div>
-                <a href="./obras/8" class="see-more mt-3">VER MAIS</a>
+                <a href="../obras/8" class="see-more mt-3">VER MAIS</a>
             </div>
         </div>
         <!-- /Card grid -->
@@ -101,7 +101,7 @@
                         <div class="card-text">
                             Ao reviver memórias de minha infância lembro-me de aos 7-8 anos, ir à casa de uma vizinha e passar horas brincando com suas bonecas Polly. Claro que ao sair de casa, carregava comigo meus brinquedos pois como poderia eu, brincar com bonecas? Fazer isso escondido dos meus pais era libertador ao mesmo tempo que arriscado. E se eu fosse pega? E se uma das bonecas quebrasse em minhas mãos? E se aquela boneca fosse minha? E se eu fosse a boneca? E se ela fosse eu?
                         </div>
-                        <a href="./obras/1" class="see-more mt-3">VER MAIS</a>
+                        <a href="../obras/1" class="see-more mt-3">VER MAIS</a>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -110,7 +110,7 @@
                         <div class="card-text">
                             A retificação do nome e gênero na certidão de nascimento é uma etapa crucial para pessoas trans, pois representa o reconhecimento legal e a validação de suas identidades.
                         </div>
-                        <a href="./obras/2" class="see-more mt-3">VER MAIS</a>
+                        <a href="../obras/2" class="see-more mt-3">VER MAIS</a>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -119,7 +119,7 @@
                         <div class="card-text">
                             A imposição de preceitos binários na moda reflete uma visão limitada e restritiva, que perpetua estereótipos de gênero. Ao insistir em categorias rígidas, essa abordagem nega a diversidade e complexidade das identidades de gênero. A moda, quando adere a esses padrões, contribui para a marginalização de indivíduos que não se encaixam nesses moldes predefinidos, limitando a expressão pessoal e reforçando normas arcaicas.
                         </div>
-                        <a href="./obras/3" class="see-more mt-3">VER MAIS</a>
+                        <a href="../obras/3" class="see-more mt-3">VER MAIS</a>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -128,7 +128,7 @@
                         <div class="card-text">
                             Durante a infância, buscava nos outros algo semelhante para validar minha existência, mas, infelizmente, os olhares que me retornavam destacavam sempre o quanto eu era percebida como diferente. Com o tempo, esses olhares passaram a rotular essas diferenças, resultando em contínuos processos de violência psicológica. Agora, compreendendo-me como travesti, percebo os olhares que se dirigem ao meu corpo ao transitar por diferentes espaços. Alguns desses olhares continuam a me violentar mas sei que em algum lugar, alguém me observa, podendo reconhecer e validar sua própria existência através da minha jornada.
                         </div>
-                        <a href="./obras/4" class="see-more mt-3">VER MAIS</a>
+                        <a href="../obras/4" class="see-more mt-3">VER MAIS</a>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -137,7 +137,7 @@
                         <div class="card-text">
                             Em um mundo baseado em percepções binárias de gênero, ao reivindicar-se enquanto pessoa trans estamos sujeitas a imposições sociais para nos encaixarmos novamente em um padrão idealizado de gênero. A pressão estética que recai sobre corpos trans, faz com que vivamos constantes crises de disforia por nos vermos distantes destes ideais. O sentimento de insatisfação e rejeição do próprio corpo faz com que muitas pessoas recorram a procedimentos indevidos, na busca por se adequar a estes padrões.
                         </div>
-                        <a href="./obras/5" class="see-more mt-3">VER MAIS</a>
+                        <a href="../obras/5" class="see-more mt-3">VER MAIS</a>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -146,7 +146,7 @@
                         <div class="card-text">
                             Do pajubá, aquendar, significa esconder. Prática comum entre travesti, aquendar a neca - esconder o pau - consiste no ato de comprimir a genitália afim de anular o volume e causar a impressão visual de ser uma buceta.
                         </div>
-                        <a href="./obras/6" class="see-more mt-3">VER MAIS</a>
+                        <a href="../obras/6" class="see-more mt-3">VER MAIS</a>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -155,7 +155,7 @@
                         <div class="card-text">
                             Imagine que a cirurgia de redesignação de gênero para uma mulher trans seja comparável a um capítulo final em um livro que muitos insistem em considerar como obrigatório para validar toda a narrativa. É como se a sociedade visse essa cirurgia como a última página que deve ser alcançada para validar a jornada de uma mulher trans, ignorando ou minimizando toda a história anterior, repleta de vivências, desafios e sentimentos que compõem sua identidade. No entanto, focar apenas na cirurgia de redesignação como o ápice da transição de gênero é semelhante a julgar um livro apenas por sua conclusão, sem apreciar ou entender a complexidade e a riqueza de cada capítulo anterior. A real necessidade da cirurgia de redesignação de gênero para uma mulher trans deve ser vista como uma escolha pessoal, não como um marco final que define sua identidade, respeitando-se o direito de cada indivíduo de expressar e viver sua identidade de gênero da maneira que se sente mais autêntico e confortável.
                         </div>
-                        <a href="./obras/7" class="see-more mt-3">VER MAIS</a>
+                        <a href="../obras/7" class="see-more mt-3">VER MAIS</a>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -164,7 +164,7 @@
                         <div class="card-text">
                             O reducionismo genitalista é uma abordagem que simplifica a identidade de gênero para se basear exclusivamente em características genitais. No contexto dos corpos trans,essa perspectiva limitada desconsidera a complexidade das experiências transgênero, focando apenas na anatomia física. É crucial reconhecer que a identidade de gênero vai além dos órgãos genitais, abrangendo aspectos psicológicos, sociais e culturais. Ao adotar uma visão mais abrangente, podemos promover uma compreensão mais inclusiva e respeitosa das diversas identidades de gênero existentes.
                         </div>
-                        <a href="./obras/8" class="see-more mt-3">VER MAIS</a>
+                        <a href="../obras/8" class="see-more mt-3">VER MAIS</a>
                     </div>
                 </div>
             </div>
@@ -187,7 +187,7 @@
                 <div class="card-text">
                     FEMMINA navega por conflitos internos relacionados à sua identidade de gênero. Imagine a instância psíquica como um cenário intrigante e complexo, onde reside uma médica e uma monstra. A médica representa a parte racional, controlada e ética de FEMMINA, enquanto a monstra personifica os desejos, impulsos e instintos mais primitivos. Conforme FEMMINA explora sua identidade travesti, a médica e a monstra começam a confrontar-se em sua mente. Esse embate interno se intensifica à medida que FEMMINA se envolve em atividades que a conectam mais profundamente com sua verdadeira identidade.
                 </div>
-                <a href="./obras/2" class="see-more mt-3">VER MAIS</a>
+                <a href="../obras/2" class="see-more mt-3">VER MAIS</a>
             </div>
         </div>
         <!-- /Card grid -->
